# poker-analytics

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: hand.py  hands.py  routes.py  schema.py  session.py  sessions.py
backend/app/api/routes/: analytics.py  auth.py  hand.py  session.py  tools.py  user.py
backend/app/api/schemas/: hand.py  session.py  user.py
backend/app/core/: config.py  deps.py  security.py
backend/app/core/evaluator/: card.py  evaluator.py  hand.py
backend/app/core/models/: card.py
backend/app/core/odds/: odds_calculator.py  simulation.py
backend/app/db/: session.py
backend/app/models/: hand.py  session.py  user.py
backend/app/services/: analytics_service.py
backend/app/tests/: test_evaluator.py  test_hand.py  test_odds.py
backend/migrations/: env.py
backend/migrations/versions/: 076fb6ac2207_init.py  08d718bdacc8_init.py  32622f01e09c_init.py  43233d1b5c1d_rename_position_column.py  49825e3bc2e1_init.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/sessions/: page.tsx
frontend/src/components/: Card.tsx  Deck.tsx  DroppableArea.tsx  HandLoggerModal.tsx  HandRankDisplay.tsx  HandRow.tsx  Navbar.tsx  OddsDisplay.tsx  ResultsPanel.tsx  SessionItem.tsx
frontend/src/components/analytics/: ActionChart.tsx  (+5 more)
