[tool.poetry]
name = "poker-analytics-backend"
version = "0.1.0"
description = "FastAPI backend for poker analytics"
authors = ["Kyle Dang <kylekd1@uci.edu>"]
readme = "README.md"

packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
sqlmodel = ">=0.0.24,<0.0.25"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"